--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 version: 2
 jobs:
   build:
-    machine:
-      - steps:
-        - checkout
-        - run: echo "hi"
+    docker:
+      - image: circleci/python:3.6.4  # primary container for the build job
+    steps:
+      - checkout
+      - run: echo "hi"
+      
 workflows:
   version: 2
   build_and_test:
