--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,11 @@ jobs:
       - image: circleci/python:3.6.4  # primary container for the build job
     steps:
       - checkout
-      - run: echo "hi"
-      
+      - run: 
+        - pip install -e .
+        - pip install -r requirements.txt
+        - python -m pytest
+
 workflows:
   version: 2
   build_and_test:
