--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,9 @@ jobs:
       - image: circleci/python:3.6.4  # primary container for the build job
     steps:
       - checkout
-      - run:
-        name: "Install"
-        command: | 
-          pip install -e .
-          pip install -r requirements.txt
-          python -m pytest
+      - run: pip install -e .
+      - run: pip install -r requirements.txt
+      - run: python -m pytest
 
 workflows:
   version: 2
