--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.4  # primary container for the build job
+      - image: circleci/python:3.6  # primary container for the build job
+    steps:
+      - checkout
+      - run: pip install -e . --user
+      - run: pip install -r requirements.txt --user
+      - run: python -m pytest
+  build:
+    docker:
+      - image: circleci/python:3.5  # primary container for the build job
     steps:
       - checkout
       - run: pip install -e . --user
