--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,24 @@
 version: 2
 jobs:
-  build:
+  python3.4:
     docker:
-      - image: circleci/python:3.6  # primary container for the build job
+      - image: circleci/python:3.4  # primary container for the build job
     steps:
       - checkout
       - run: pip install -e . --user
       - run: pip install -r requirements.txt --user
       - run: python -m pytest
+  python3.5:
     docker:
-      - image: circleci/python:3.5  # primary container for the build job
+      - image: circleci/python:3.4  # primary container for the build job
+    steps:
+      - checkout
+      - run: pip install -e . --user
+      - run: pip install -r requirements.txt --user
+      - run: python -m pytest
+  python3.6:
+    docker:
+      - image: circleci/python:3.4  # primary container for the build job
     steps:
       - checkout
       - run: pip install -e . --user
@@ -20,4 +29,6 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
+      - python3.4
+      - python3.5
+      - python3.6
