--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: python -m pytest
   python3.5:
     docker:
-      - image: circleci/python:3.4  # primary container for the build job
+      - image: circleci/python:3.5  # primary container for the build job
     steps:
       - checkout
       - run: pip install -e . --user
@@ -18,7 +18,15 @@ jobs:
       - run: python -m pytest
   python3.6:
     docker:
-      - image: circleci/python:3.4  # primary container for the build job
+      - image: circleci/python:3.6  # primary container for the build job
+    steps:
+      - checkout
+      - run: pip install -e . --user
+      - run: pip install -r requirements.txt --user
+      - run: python -m pytest
+  python3.6:
+    docker:
+      - image: circleci/python:3.7  # primary container for the build job
     steps:
       - checkout
       - run: pip install -e . --user
