--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,38 @@
 version: 2
 jobs:
-  python3.4:
-    docker:
-      - image: circleci/python:3.4  # primary container for the build job
-    steps:
-      - checkout
-      - run: pip install -e . --user
-      - run: pip install -r requirements.txt --user
-      - run: python -m pytest
-  python3.5:
-    docker:
-      - image: circleci/python:3.5  # primary container for the build job
-    steps:
-      - checkout
-      - run: pip install -e . --user
-      - run: pip install -r requirements.txt --user
-      - run: python -m pytest
-  python3.6:
-    docker:
-      - image: circleci/python:3.6  # primary container for the build job
-    steps:
-      - checkout
-      - run: pip install -e . --user
-      - run: pip install -r requirements.txt --user
-      - run: python -m pytest
-  python3.7:
-    docker:
-      - image: circleci/python:3.7  # primary container for the build job
-    steps:
-      - checkout
-      - run: pip install -e . --user
-      - run: pip install -r requirements.txt --user
-      - run: python -m pytest
-  trigger_core:
-    docker:
-      - image: circleci/python:3.7  # primary container for the build job
-    steps:
-      - run: curl -X POST https://circleci.com/api/v1/project/masoniteframework/validation/tree/master?circle-token=$CIRCLE_TOKEN
+  build:
+      python3.4:
+        docker:
+          - image: circleci/python:3.4  # primary container for the build job
+        steps:
+          - checkout
+          - run: pip install -e . --user
+          - run: pip install -r requirements.txt --user
+          - run: python -m pytest
+      python3.5:
+        docker:
+          - image: circleci/python:3.5  # primary container for the build job
+        steps:
+          - checkout
+          - run: pip install -e . --user
+          - run: pip install -r requirements.txt --user
+          - run: python -m pytest
+      python3.6:
+        docker:
+          - image: circleci/python:3.6  # primary container for the build job
+        steps:
+          - checkout
+          - run: pip install -e . --user
+          - run: pip install -r requirements.txt --user
+          - run: python -m pytest
+      python3.7:
+        docker:
+          - image: circleci/python:3.7  # primary container for the build job
+        steps:
+          - checkout
+          - run: pip install -e . --user
+          - run: pip install -r requirements.txt --user
+          - run: python -m pytest
 
 
 workflows:
