--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
       docker:
         - image: circleci/python:3.6  # primary container for the build job
       steps:
+        - checkout
         - run: python trigger.py
 
 
