--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
         - image: circleci/python:3.4  # primary container for the build job
       steps:
         - checkout
+        - run: pip install https://github.com/masoniteframework/core/archive/$DEPENDENT_BRANCH.zip
         - run: pip install -e . --user
         - run: pip install -r requirements.txt --user
         - run: python -m pytest
@@ -13,6 +14,7 @@ jobs:
         - image: circleci/python:3.5  # primary container for the build job
       steps:
         - checkout
+        - run: pip install https://github.com/masoniteframework/core/archive/$DEPENDENT_BRANCH.zip
         - run: pip install -e . --user
         - run: pip install -r requirements.txt --user
         - run: python -m pytest
@@ -21,6 +23,7 @@ jobs:
         - image: circleci/python:3.6  # primary container for the build job
       steps:
         - checkout
+        - run: pip install https://github.com/masoniteframework/core/archive/$DEPENDENT_BRANCH.zip
         - run: pip install -e . --user
         - run: pip install -r requirements.txt --user
         - run: python -m pytest
@@ -29,6 +32,7 @@ jobs:
         - image: circleci/python:3.7  # primary container for the build job
       steps:
         - checkout
+        - run: pip install https://github.com/masoniteframework/core/archive/$DEPENDENT_BRANCH.zip
         - run: pip install -e . --user
         - run: pip install -r requirements.txt --user
         - run: python -m pytest
