--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,28 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
       - image: circleci/python:3.6.4  # primary container for the build job
     steps:
       - checkout
-      - run: echo "hi"
+      - run: python -m pytest
       
+orbs:
+    masonite: masonite/trigger@dev:latest
+
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
+      - build:
+          filters:  # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /^.*/
+      - masonite/deploy:
+          username: josephmancuso
+          password: $PYPI_PASSWORD
+          filters:  # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /^.*/
+            branches:
+              ignore: /.*/
