added pip install instruction

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/python:3.6.4  # primary container for the build job
     steps:
       - checkout
+      - run: pip install . --user
       - run: python -m pytest
       
 orbs:
