--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,7 @@
 DB_DATABASE=test.db
 DB_DRIVER=sqlite
 DB_CONNECTION=sqlite
+APP_NAME=Masonite validation
+APP_ENV=local
+APP_DEBUG=True
+KEY=V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk=
