--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 filterwarnings =
     ignore::DeprecationWarning
+markers =
+    db_tests: marks tests requiring db server (deselect with '-m "not db_tests"')
