add unique validation rule

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,7 @@ jobs:
         make init
     - name: Test with pytest
       run: |
-        make test
+        make test_no_db
   lint:
     runs-on: ubuntu-latest
     name: Lint
@@ -35,4 +35,3 @@ jobs:
         pip install flake8
     - name: Lint
       run: make lint
-
