try to add env key to fix tests

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,6 +19,8 @@ jobs:
       run: |
         make init
     - name: Test with pytest
+      env:
+        - KEY: "V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk="
       run: |
         make test
   lint:
