--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,7 @@ jobs:
         make init
     - name: Test with pytest
       env:
-        - KEY: "V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk="
+        KEY: "V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk="
       run: |
         make test
   lint:
