--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       env:
-        - KEY: "V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk="
+        KEY: "V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk="
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
