--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 APP_NAME=Masonite validation
 APP_ENV=local
 APP_DEBUG=True
-KEY=your-secret-key
+KEY=V9S1aNsUUS-GY5gDph63koaJ2e8dApqthrDc7PL50xk=
 
 DB_DATABASE=test.db
 DB_DRIVER=sqlite
